[package]
name = "FinalProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_insert_avltree"
harness = false

[[bench]]
name = "bench_search_avltree"
harness = false

[[bench]]
name="bench_insert_rbtree"
harness= false

[[bench]]
name="bench_search_rbtree"
harness=false

[features]
debug_print = []